<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>com.uber.uReplicator</groupId>
	<artifactId>uReplicator-Distribution</artifactId>
	<packaging>jar</packaging>
	<version>1.0-SNAPSHOT</version>
	<name>uReplicator-Distribution</name>
	<parent>
		<artifactId>uReplicator</artifactId>
		<groupId>com.uber.uReplicator</groupId>
		<version>1.0-SNAPSHOT</version>
	</parent>
	<description>
      A distribution for this project.
    </description>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.uber.uReplicator</groupId>
			<artifactId>uReplicator-Controller</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>com.uber.uReplicator</groupId>
			<artifactId>uReplicator-Worker</artifactId>
			<version>${project.version}</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.5.1</version>
				<inherited>true</inherited>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>2.3</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.1</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.9</version>
				<configuration>
					<downloadSources>true</downloadSources>
					<downloadJavadocs>true</downloadJavadocs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.14</version>
				<configuration>
					<argLine>-Xmx2g</argLine>
					<!-- Do not set argLine here, it will break the code coverage plugin.
						Set it in the properties section. -->
					<forkCount>1</forkCount>
					<reuseForks>false</reuseForks>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>2.5.5</version>
				<configuration>
					<archive>
						<manifest>
							<mainClass>com.uber.stream.kafka.mirrormaker.starter.MirrorMakerStarter</mainClass>
						</manifest>
					</archive>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>appassembler-maven-plugin</artifactId>
				<configuration>
					<programs>
						<program>
							<mainClass>com.uber.stream.kafka.mirrormaker.controller.ControllerStarter</mainClass>
							<id>start-controller</id>
							<commandLineArguments>
								<commandLineArgument>-configFile config/mirror-task.properties</commandLineArgument>
							</commandLineArguments>
							<jvmSettings>
								<initialMemorySize>512m</initialMemorySize>
								<maxMemorySize>512m</maxMemorySize>
							</jvmSettings>
							<jvmSettings>
								<extraArguments>
									<extraArgument>-DprojectCode=dmg</extraArgument>
									<extraArgument>-DappCode=mirror-controller</extraArgument>
									<extraArgument>-DstartupMonitor=false</extraArgument>
									<!--<extraArgument>-XX:+UseG1GC</extraArgument>
									<extraArgument>-XX:+DisableExplicitGC</extraArgument>
									<extraArgument>-XX:+PrintGCDetails</extraArgument>
									<extraArgument>-XX:+PrintGCDateStamps</extraArgument>
									<extraArgument>-XX:+PrintAdaptiveSizePolicy</extraArgument>
									<extraArgument>-XX:+PrintTenuringDistribution</extraArgument>
									<extraArgument>-XX:+PrintGCApplicationStoppedTime</extraArgument>
									<extraArgument>-XX:+PrintReferenceGC</extraArgument>
									<extraArgument>-XX:+ParallelRefProcEnabled</extraArgument>
									<extraArgument>-XX:G1HeapRegionSize=8m</extraArgument>
									<extraArgument>-XX:InitiatingHeapOccupancyPercent=85</extraArgument>
									<extraArgument>-XX:+UnlockExperimentalVMOptions</extraArgument>
									<extraArgument>-XX:G1MixedGCLiveThresholdPercent=85</extraArgument>
									<extraArgument>-XX:G1HeapWastePercent=5</extraArgument>-->
								</extraArguments>
							</jvmSettings>
						</program>
						<program>
							<mainClass>kafka.mirrormaker.MirrorMakerWorker</mainClass>
							<id>start-worker</id>
							<commandLineArguments>
								<commandLineArgument>--consumer.config config/consumer.properties</commandLineArgument>
								<commandLineArgument>--producer.config config/producer.properties</commandLineArgument>
								<commandLineArgument>--dstzk.config config/dstzk.properties</commandLineArgument>
								<commandLineArgument>--helix.config config/helix.properties</commandLineArgument>
								<commandLineArgument>--topic.mappings config/topicmapping.properties</commandLineArgument>
							</commandLineArguments>
							<jvmSettings>
								<initialMemorySize>512m</initialMemorySize>
								<maxMemorySize>512m</maxMemorySize>
							</jvmSettings>
							<jvmSettings>
								<extraArguments>
									<extraArgument>-DprojectCode=dmg</extraArgument>
									<extraArgument>-DappCode=mirror-worker</extraArgument>
									<extraArgument>-DstartupMonitor=false</extraArgument>
									<!--<extraArgument>-XX:+UseG1GC</extraArgument>
									<extraArgument>-XX:+DisableExplicitGC</extraArgument>
									<extraArgument>-XX:+PrintGCDetails</extraArgument>
									<extraArgument>-XX:+PrintGCDateStamps</extraArgument>
									<extraArgument>-XX:+PrintAdaptiveSizePolicy</extraArgument>
									<extraArgument>-XX:+PrintTenuringDistribution</extraArgument>
									<extraArgument>-XX:+PrintGCApplicationStoppedTime</extraArgument>
									<extraArgument>-XX:+PrintReferenceGC</extraArgument>
									<extraArgument>-XX:+ParallelRefProcEnabled</extraArgument>
									<extraArgument>-XX:G1HeapRegionSize=8m</extraArgument>
									<extraArgument>-XX:InitiatingHeapOccupancyPercent=85</extraArgument>
									<extraArgument>-XX:+UnlockExperimentalVMOptions</extraArgument>
									<extraArgument>-XX:G1MixedGCLiveThresholdPercent=85</extraArgument>
									<extraArgument>-XX:G1HeapWastePercent=5</extraArgument>-->
								</extraArguments>
							</jvmSettings>
						</program>
					</programs>
					<binFileExtensions>
						<unix>.sh</unix>
					</binFileExtensions>
					<!-- Set the target configuration directory to be used in the bin scripts -->
					<configurationDirectory>config</configurationDirectory>
					<!-- Copy the contents from "/src/main/config" to the target configuration
						directory in the assembled application -->
					<copyConfigurationDirectory>true</copyConfigurationDirectory>
					<!-- Include the target configuration directory in the beginning of
						the classpath declaration in the bin scripts -->
					<includeConfigurationDirectoryInClasspath>false</includeConfigurationDirectoryInClasspath>
					<assembleDirectory>${project.build.directory}/${project.artifactId}-pkg</assembleDirectory>
					<!-- Extra JVM arguments that will be included in the bin scripts -->
					<extraJvmArguments>-Xms512m -Xmx512m</extraJvmArguments>
					<!-- Generate bin scripts for windows and unix pr default -->
					<platforms>
						<platform>unix</platform>
					</platforms>
					<repositoryName>lib</repositoryName>
					<repositoryLayout>flat</repositoryLayout>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.5</version>
				<executions>
					<execution>
						<id>copy-bin</id>
						<phase>package</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>../bin/pkg</outputDirectory>
							<resources>
								<resource>
									<directory>${project.build.directory}/${project.artifactId}-pkg/bin</directory>
									<includes>
										<include>*.sh</include>
									</includes>
								</resource>
							</resources>
						</configuration>
					</execution>
					<execution>
						<id>copy-config</id>
						<phase>package</phase>
						<goals>
							<goal>copy-resources</goal>
						</goals>
						<configuration>
							<outputDirectory>${project.build.directory}/${project.artifactId}-pkg/config</outputDirectory>
							<resources>
								<resource>
									<directory>../config</directory>
									<includes>
										<include>*.properties</include>
									</includes>
								</resource>
							</resources>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>
